--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,10 +1,10 @@
 name: Build and Push Docker Image
 
 on:
-  push:
-    branches:
-      - main
-
+  # push:
+  #   branches:
+  #     - main
+  workflow_dispatch: 
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,7 +18,10 @@ jobs:
         run: echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
 
       - name: Build the Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/manypips:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/manypips:${{ env.DATE_TAG }} .
 
       - name: Push the Docker image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/my-app:latest
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/manypips:latest
+
+      - name: Push the Docker image (date tag)
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/manypips:${{ env.DATE_TAG }}
