--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,12 +11,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+
       - name: Log in to Docker Hub
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
         run: echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
 
+      - name: Set DATE_TAG
+        run: echo "DATE_TAG=$(date +'%Y%m%d')" >> $GITHUB_ENV
+       
       - name: Build the Docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/manypips:latest -t ${{ secrets.DOCKERHUB_USERNAME }}/manypips:${{ env.DATE_TAG }} .
 
