--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ aioboto3==12.3.0
 aiodns==3.2.0
 aiofiles==24.1.0
 aiohappyeyeballs==2.4.6
-aiohttp[speedups]==3.11.11
+aiohttp[speedups]>=3.11.11
 aiohttp>=3.8.0
 aiohttp-retry==2.9.1
 aiosignal==1.3.2
@@ -35,14 +35,14 @@ dnspython==2.7.0
 docopt==0.6.2
 einops==0.8.0
 email-validator==2.2.0
-fastapi[all]==0.115.8
-fastapi==0.95.2
-fastapi-cli[standard]==0.0.7
+fastapi[all]>=0.115.8
+fastapi>=0.95.2
+fastapi-cli[standard]>=0.0.7
 ffmpeg-python>=0.2.0
 filelock==3.17.0
 fonttools==4.55.3
 frozenlist==1.5.0
-fsspec[http]==2024.10.0
+fsspec[http]>=2024.10.0
 fsspec==2025.2.0
 google-generativeai
 greenlet==3.1.1
@@ -53,7 +53,7 @@ h2==4.1.0
 hpack==4.0.0
 httpcore==1.0.7
 httptools==0.6.4
-httpx[http2]==0.28.1
+httpx[http2]>=0.28.1
 httpx==0.28.1
 huggingface-hub==0.28.1
 hyperframe==6.0.1
@@ -204,7 +204,7 @@ typing-extensions==4.12.2
 tzdata==2024.2
 ujson==5.10.0
 urllib3==2.3.0
-uvicorn[standard]==0.34.0
+uvicorn[standard]>=0.34.0
 uvicorn==0.34.0
 uvloop==0.21.0
 vosk==0.3.45
