--- a/requirements.txt
+++ b/requirements.txt
@@ -1,216 +1,216 @@
-aioboto3==12.3.0
-aiodns==3.2.0
-aiofiles==24.1.0
-aiohappyeyeballs==2.4.6
+aioboto3>=12.3.0
+aiodns>=3.2.0
+aiofiles>=24.1.0
+aiohappyeyeballs>=2.4.6
 aiohttp[speedups]>=3.11.11
 aiohttp>=3.8.0
-aiohttp-retry==2.9.1
-aiosignal==1.3.2
-alembic==1.14.1
-annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-anyio==4.8.0
-asteroid-filterbanks==0.4.0
+aiohttp-retry>=2.9.1
+aiosignal>=1.3.2
+alembic>=1.14.1
+annotated-types>=0.7.0
+antlr4-python3-runtime>=4.9.3
+anyio>=4.8.0
+asteroid-filterbanks>=0.4.0
 asyncio>=3.4.3
-attrs==25.1.0
-audioread==3.0.1
-backoff==2.2.1
-bcrypt==4.2.1
+attrs>=25.1.0
+audioread>=3.0.1
+backoff>=2.2.1
+bcrypt>=4.2.1
 boto3>=1.26.137
 botocore>=1.29.137
-brotli==1.1.0
-certifi==2025.1.31
-cffi==1.17.1
-chardet==5.2.0
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-colorlog==6.9.0
-contourpy==1.3.1
-cryptography==44.0.0
-cycler==0.12.1
-decorator==5.1.1
-distro==1.9.0
-dnspython==2.7.0
-docopt==0.6.2
-einops==0.8.0
-email-validator==2.2.0
+brotli>=1.1.0
+certifi>=2025.1.31
+cffi>=1.17.1
+chardet>=5.2.0
+charset-normalizer>=3.4.1
+click>=8.1.8
+colorama>=0.4.6
+colorlog>=6.9.0
+contourpy>=1.3.1
+cryptography>=44.0.0
+cycler>=0.12.1
+decorator>=5.1.1
+distro>=1.9.0
+dnspython>=2.7.0
+docopt>=0.6.2
+einops>=0.8.0
+email-validator>=2.2.0
 fastapi[all]>=0.115.8
 fastapi>=0.95.2
 fastapi-cli[standard]>=0.0.7
 ffmpeg-python>=0.2.0
-filelock==3.17.0
-fonttools==4.55.3
-frozenlist==1.5.0
+filelock>=3.17.0
+fonttools>=4.55.3
+frozenlist>=1.5.0
 fsspec[http]>=2024.10.0
-fsspec==2025.2.0
+fsspec>=2025.2.0
 google-generativeai
-greenlet==3.1.1
-grpcio==1.69.0
-grpcio-tools==1.69.0
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==1.0.7
-httptools==0.6.4
+greenlet>=3.1.1
+grpcio>=1.69.0
+grpcio-tools>=1.69.0
+h11>=0.14.0
+h2>=4.1.0
+hpack>=4.0.0
+httpcore>=1.0.7
+httptools>=0.6.4
 httpx[http2]>=0.28.1
-httpx==0.28.1
-huggingface-hub==0.28.1
-hyperframe==6.0.1
-hyperpyyaml==1.2.2
-idna==3.10
-inquirerpy==0.3.4
-itsdangerous==2.2.0
-jinja2==3.1.5
-jiter==0.8.2
-jmespath==1.0.1
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-julius==0.2.7
-kiwisolver==1.4.7
-langchain==0.3.18
-langchain-core==0.3.34
-langchain-text-splitters==0.3.6
-langdetect==1.0.9
-langsmith==0.3.8
-lazy-loader==0.4
-librosa==0.10.2.post1
-lightning==2.4.0
-lightning-utilities==0.11.9
-llvmlite==0.43.0
-mako==1.3.9
-markdown-it-py==3.0.0
-markupsafe==3.0.2
-matplotlib==3.10.0
-mdurl==0.1.2
-mpmath==1.3.0
-msgpack==1.1.0
-multidict==6.1.0
-networkx==3.4.2
-numba==0.60.0
+httpx>=0.28.1
+huggingface-hub>=0.28.1
+hyperframe>=6.0.1
+hyperpyyaml>=1.2.2
+idna>=3.10
+inquirerpy>=0.3.4
+itsdangerous>=2.2.0
+jinja2>=3.1.5
+jiter>=0.8.2
+jmespath>=1.0.1
+joblib>=1.4.2
+jsonpatch>=1.33
+jsonpointer>=3.0.0
+julius>=0.2.7
+kiwisolver>=1.4.7
+langchain>=0.3.18
+langchain-core>=0.3.34
+langchain-text-splitters>=0.3.6
+langdetect>=1.0.9
+langsmith>=0.3.8
+lazy-loader>=0.4
+librosa>=0.10.2.post1
+lightning>=2.4.0
+lightning-utilities>=0.11.9
+llvmlite>=0.43.0
+mako>=1.3.9
+markdown-it-py>=3.0.0
+markupsafe>=3.0.2
+matplotlib>=3.10.0
+mdurl>=0.1.2
+mpmath>=1.3.0
+msgpack>=1.1.0
+multidict>=6.1.0
+networkx>=3.4.2
+numba>=0.60.0
 numpy>=1.24.0
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-cusparselt-cu12==0.6.2
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
+nvidia-cublas-cu12>=12.4.5.8
+nvidia-cuda-cupti-cu12>=12.4.127
+nvidia-cuda-nvrtc-cu12>=12.4.127
+nvidia-cuda-runtime-cu12>=12.4.127
+nvidia-cudnn-cu12>=9.1.0.70
+nvidia-cufft-cu12>=11.2.1.3
+nvidia-curand-cu12>=10.3.5.147
+nvidia-cusolver-cu12>=11.6.1.9
+nvidia-cusparse-cu12>=12.3.1.170
+nvidia-cusparselt-cu12>=0.6.2
+nvidia-nccl-cu12>=2.21.5
+nvidia-nvjitlink-cu12>=12.4.127
+nvidia-nvtx-cu12>=12.4.127
 ollama>=0.4.7
-omegaconf==2.3.0
+omegaconf>=2.3.0
 openai>=1.12.0
-opencv-python==4.10.0.84
-opentelemetry-api==1.18.0
-opentelemetry-exporter-otlp==1.18.0
-opentelemetry-instrumentation-fastapi==0.39b0
-opentelemetry-sdk==1.18.0
-opentelemetry-semantic-conventions==0.39b0
-optuna==4.1.0
-orjson==3.10.15
-packaging==24.2
-pandas==2.2.3
-paramiko==3.5.0
-pfzy==0.3.4
+opencv-python>=4.10.0.84
+opentelemetry-api>=1.18.0
+opentelemetry-exporter-otlp>=1.18.0
+opentelemetry-instrumentation-fastapi>=0.39b0
+opentelemetry-sdk>=1.18.0
+opentelemetry-semantic-conventions>=0.39b0
+optuna>=4.1.0
+orjson>=3.10.15
+packaging>=24.2
+pandas>=2.2.3
+paramiko>=3.5.0
+pfzy>=0.3.4
 Pillow>=9.0.0
-platformdirs==4.3.6
-pooch==1.8.2
-portalocker==2.10.1
-prettytable==3.14.0
-primepy==1.3
+platformdirs>=4.3.6
+pooch>=1.8.2
+portalocker>=2.10.1
+prettytable>=3.14.0
+primepy>=1.3
 prometheus-client>=0.19.0
-prompt-toolkit==3.0.50
-propcache==0.2.1
-protobuf==5.29.3
-psycopg2-binary==2.9.9
-pyannote-audio==3.3.2
-pyannote-core==5.0.0
-pyannote-database==5.1.0
-pyannote-metrics==3.2.1
-pyannote-pipeline==3.0.1
-pycares==4.5.0
-pycparser==2.22
-py-cpuinfo==9.0.0
-pydantic==2.6.1
-pydantic-core==2.27.2
-pydantic-extra-types==2.10.2
-pydantic-settings==2.7.1
-pydub==0.25.1
-pygments==2.19.1
-pynacl==1.5.0
-pyparsing==3.2.0
-pytesseract==0.3.10
+prompt-toolkit>=3.0.50
+propcache>=0.2.1
+protobuf>=5.29.3
+psycopg2-binary>=2.9.9
+pyannote-audio>=3.3.2
+pyannote-core>=5.0.0
+pyannote-database>=5.1.0
+pyannote-metrics>=3.2.1
+pyannote-pipeline>=3.0.1
+pycares>=4.5.0
+pycparser>=2.22
+py-cpuinfo>=9.0.0
+pydantic>=2.6.1
+pydantic-core>=2.27.2
+pydantic-extra-types>=2.10.2
+pydantic-settings>=2.7.1
+pydub>=0.25.1
+pygments>=2.19.1
+pynacl>=1.5.0
+pyparsing>=3.2.0
+pytesseract>=0.3.10
 pytest
 pytest_asyncio
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
-python-multipart==0.0.6
-pytorch-lightning==2.4.0
-pytorch-metric-learning==2.8.1
-pytz==2024.2
-pyyaml==6.0.2
-qdrant-client==1.12.2
-regex==2024.11.6
-requests==2.32.3
-requests-toolbelt==1.0.0
-rich==13.9.4
-rich-toolkit==0.13.2
-ruamel-yaml==0.18.6
-ruamel-yaml-clib==0.2.12
-runpod==1.7.7
-s3transfer==0.11.2
-safetensors==0.5.2
-scikit-learn==1.6.1
-scipy==1.15.1
-semver==3.0.2
-sentencepiece==0.2.0
-sentence-transformers==3.4.1
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-sortedcontainers==2.4.0
-soundfile==0.12.1
-soxr==0.5.0.post1
-speechbrain==1.0.2
-sqlalchemy==2.0.37
-srt==3.5.3
-starlette==0.45.3
-sympy==1.13.1
-tabulate==0.9.0
-temporalio==1.4.0
-tenacity==9.0.0
-tensorboardx==2.6.2.2
-threadpoolctl==3.5.0
-tokenizers==0.21.0
-tomli==2.2.1
-tomlkit==0.13.2
-torch==2.6.0
-torchaudio==2.5.1
-torch-audiomentations==0.11.1
-torchmetrics==1.6.0
-torch-pitch-shift==1.2.5
-tqdm==4.67.1
-tqdm-loggable==0.2
-transformers==4.48.3
-triton==3.2.0
-typer==0.15.1
-typing-extensions==4.12.2
-tzdata==2024.2
-ujson==5.10.0
-urllib3==2.3.0
+python-dateutil>=2.9.0.post0
+python-dotenv>=1.0.0
+python-multipart>=0.0.6
+pytorch-lightning>=2.4.0
+pytorch-metric-learning>=2.8.1
+pytz>=2024.2
+pyyaml>=6.0.2
+qdrant-client>=1.12.2
+regex>=2024.11.6
+requests>=2.32.3
+requests-toolbelt>=1.0.0
+rich>=13.9.4
+rich-toolkit>=0.13.2
+ruamel-yaml>=0.18.6
+ruamel-yaml-clib>=0.2.12
+runpod>=1.7.7
+s3transfer>=0.11.2
+safetensors>=0.5.2
+scikit-learn>=1.6.1
+scipy>=1.15.1
+semver>=3.0.2
+sentencepiece>=0.2.0
+sentence-transformers>=3.4.1
+shellingham>=1.5.4
+six>=1.17.0
+sniffio>=1.3.1
+sortedcontainers>=2.4.0
+soundfile>=0.12.1
+soxr>=0.5.0.post1
+speechbrain>=1.0.2
+sqlalchemy>=2.0.37
+srt>=3.5.3
+starlette>=0.45.3
+sympy>=1.13.1
+tabulate>=0.9.0
+temporalio>=1.4.0
+tenacity>=9.0.0
+tensorboardx>=2.6.2.2
+threadpoolctl>=3.5.0
+tokenizers>=0.21.0
+tomli>=2.2.1
+tomlkit>=0.13.2
+torch>=2.6.0
+torchaudio>=2.5.1
+torch-audiomentations>=0.11.1
+torchmetrics>=1.6.0
+torch-pitch-shift>=1.2.5
+tqdm>=4.67.1
+tqdm-loggable>=0.2
+transformers>=4.48.3
+triton>=3.2.0
+typer>=0.15.1
+typing-extensions>=4.12.2
+tzdata>=2024.2
+ujson>=5.10.0
+urllib3>=2.3.0
 uvicorn[standard]>=0.34.0
-uvicorn==0.34.0
-uvloop==0.21.0
-vosk==0.3.45
-watchdog==6.0.0
-watchfiles==1.0.4
-wcwidth==0.2.13
-websockets==14.2
-yarl==1.18.3
-zstandard==0.23.0
+uvicorn>=0.34.0
+uvloop>=0.21.0
+vosk>=0.3.45
+watchdog>=6.0.0
+watchfiles>=1.0.4
+wcwidth>=0.2.13
+websockets>=14.2
+yarl>=1.18.3
+zstandard>=0.23.0
